--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -44,6 +44,7 @@
                 android:hint="@string/prompt_email"
                 android:inputType="textPhonetic"
                 android:maxLines="1"
+                android:text="13480000000"
                 android:singleLine="true" />
 
         </android.support.design.widget.TextInputLayout>
@@ -62,6 +63,7 @@
                 android:imeOptions="actionUnspecified"
                 android:inputType="textPassword"
                 android:maxLines="1"
+                android:text="123456"
                 android:singleLine="true" />
 
         </android.support.design.widget.TextInputLayout>
