--- a/app/src/main/res/layout/activity_port_join.xml
+++ b/app/src/main/res/layout/activity_port_join.xml
@@ -1,19 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:background="@drawable/intelligent_scan_bg">
+<RelativeLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.jifan.actv.WifiSendActivity">
-            <com.jifan.utils.MyListView
-            android:id="@+id/gv_dev"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="5dp"
-            android:horizontalSpacing="2dp"
-            android:listSelector="@null"
-            android:numColumns="4"
-            android:stretchMode="columnWidth"
-            android:verticalSpacing="2dp">
-        </com.jifan.utils.MyListView>
+    android:layout_height="match_parent">
+    <ListView
+        android:id="@+id/list_dev"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="10dp" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/scan_animate"
+        android:layout_centerInParent="true"
+        android:visibility="invisible"
+        android:id="@+id/ivcan" />
+
+    <TextView
+        android:text="扫描"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone"
+        android:id="@+id/tv_scan" />
+
+</RelativeLayout>
+
+
+
 </android.support.constraint.ConstraintLayout>
